# Study

./: README.md  Ubuntu공유폴더SSH빌드  _config.yml  hello.html
AMB82-Mini/1. On-Deveice Object Detector/: readme.md
AWS/: AWSmotor2.ino
AWS/AWSmotor/: node-red.txt
AWS/AWSmotor/AWSmotor2/: AWSmotor2.ino
AWS/GooglechatbotOtto/: Fulfillment.json  GGChatBot.txt  GooglechatbotOtto.ino
ESP/Arduino-Linux/: readme.md
ESP/ESP32/Swift/: readme.md
GGCHAT/: firebaseLED.ino  firebaseled.ino  fulfilment.json
ROS/: readme.md
ROS Project/: readme.md
ROS Project/ROS/: readme.md
ROS Project/ROS/2.Simple Pub-Sub/: CMakeLists.txt  readme.md  simple_subscriber.cpp
ROS Project/ROS2/: readme.md
ROS/1.ROS_Workspace/: readme.md
ROS/2.Simple Pub-Sub/: CMakeLists.txt  simple_subscriber.cpp  simple_subscriber.py
ROS/2.Simple Publisher/: CMakeLists.txt  readme.md  simple_publisher.cpp  simple_publisher.py
ROS/3.URDF/: bumperbot.urdf  bumperbot_gazebo.xacro  readme.md
ROS/4.Parameter Server/: ParameterServerGuide.md
ROS/full code/: readme.md
n8n/AudioToDiscord/: Google Drive.json  m4atomp3.json  m4atomp3_ENG.json  readme.md  오디오요약디스코드.json
n8n/Install n8n on Windows 11/: readme.md
n8n/Naver/: N1-비로그인,검색API.json
n8n/docker/: readme.md
n8n/kakao/: 1.json  2.json  Credential.json
n8n/mqtt/: workflow.json
n8n/todoist/: readme.md  task.json
sensor/rgbled/: rgbled.ino
sensor/tem@hum/: DHT_ESP8266.ino
로봇공학개론/1주차 스크립트 제작/: 강의제작.txt
로봇공학개론/2주차 스크립트 검토/: 대본.hwpx  회의내용2.txt
로봇공학개론/3주차 PPT 초안작성/: 진행상황 중간 보고.txt
자료구조/: 1. class.cpp  helloTest.cpp  readme.md
(+95 files in other folders)
